--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ Jinja2==2.10
 MarkupSafe==1.0
 python-dateutil==2.7.3
 python-decouple==3.1
-redis==2.10.6
-rq==0.12.0
-rq-dashboard==0.3.12
+redis
+rq
+rq-dashboard
 six==1.11.0
 Werkzeug==0.14.1
