--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ Jinja2==2.10
 MarkupSafe==1.0
 python-dateutil==2.7.3
 python-decouple==3.1
-redis
-rq
-rq-dashboard
+redis==3.5.3
+rq==1.7.0
+rq-dashboard==0.6.1
 six==1.11.0
 Werkzeug==0.14.1
